s/sorted/ordered/ - while there's still time

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>JQuery Masonry Sorted &ndash; test page</title>
+	<title>JQuery Masonry Ordered &ndash; test page</title>
 
 	<link type="text/css" href="./files/style.css" rel="stylesheet" media="screen" />
 	<link type="text/css" href="./files/jquery-ui.css" rel="stylesheet" media="screen" />
@@ -12,12 +12,12 @@
 	<script type="text/javascript" src="./files/gallery.js"></script>
 	<script type="text/javascript" src="./files/jquery.imagesloaded.js"></script>
 	<script type="text/javascript" src="./files/jquery.masonry.js"></script>
-	<script type="text/javascript" src="../jquery.masonry.sorted.js"></script>
+	<script type="text/javascript" src="../jquery.masonry.ordered.js"></script>
 </head>
 <body>
 
 <div id="breadcrumbs">
-	JQuery Masonry Sorted test
+	JQuery Masonry Ordered test
 	<div id="slider"></div>
 	<div class="clear"></div>
 </div>
