move demo from january to february

--- a/_posts/1970-02-01-demo-gallery.html
+++ b/_posts/1970-02-01-demo-gallery.html
@@ -3,7 +3,7 @@ layout: default
 title: "Demo: Photo gallery"
 ---
 
-<h1>Masonry Ordered demo: Photo Gallery</h1>
+<h1>jQuery Masonry Ordered demo: Photo Gallery</h1>
 <div id="slider"></div>
 
 <div id="images">
