capitalize GitHub properly

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ mini_bricks:
 </a></div>
 
 <div class="item link"><a href="http://github.com/tasuk/masonry-ordered">
-	jQuery Masonry Ordered on <strong>github</strong>:<br/>
+	jQuery Masonry Ordered on <strong>GitHub</strong>:<br/>
 	&ndash; browse the code<br/>
 	&ndash; submit bug reports<br/>
 	&ndash; fork &amp; contribute
