"jQuery" seems redundant in the demo title

--- a/_posts/1970-02-01-demo-gallery.html
+++ b/_posts/1970-02-01-demo-gallery.html
@@ -4,7 +4,7 @@ title: "Demo: Photo gallery"
 ---
 
 <div class="padmore">
-	<h1>jQuery Masonry Ordered demo: Photo Gallery</h1>
+	<h1>Masonry Ordered demo: Photo gallery</h1>
 	<div id="slider-wrap">
 		<div class="left">Original Masonry</div>
 		<div class="right">Masonry Ordered</div>
