--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ mini_bricks:
 
 <div class="item col2">
 	Alternative layout strategy for <a href="http://masonry.desandro.com">jQuery Masonry</a><br/>
-	Keep the sequence of items in original order<br/>
+	Keeps the items in original order<br/>
 	<br/>
 	&larr; View docs and demos
 </div>
