add desiderata demo, abstract slider

--- a/_posts/1970-02-01-demo-gallery.html
+++ b/_posts/1970-02-01-demo-gallery.html
@@ -5,13 +5,7 @@ title: "Demo: Photo gallery"
 
 <div class="padmore">
 	<h1>Masonry Ordered demo: Photo gallery</h1>
-	<div id="slider-wrap">
-		<div class="left">Original Masonry</div>
-		<div class="right">Masonry Ordered</div>
-		<div id="slider" class="clear"></div>
-	</div>
-	<div id="slider-explanation">Play around with the slider on the right side. You can smoothly transition from the original Masonry layout strategy to the Masonry Ordered layout. (Try it on a large screen if you can!)
-	</div>
+	{% include slider.html %}
 </div>
 
 <div class="clear" id="images">
@@ -85,18 +79,5 @@ $(document).ready(function(){
 	.css('font-size', '30px')
 	.css('text-decoration', 'none')
 	.css('text-shadow', '#999 2px 2px 1px');
-
-	$("#slider").slider({
-		value: 55,
-		step: 5,
-
-		slide: function(event, ui) {
-			$('#images').masonry({
-				layoutPriorities: {
-					shelfOrder: Math.pow((ui.value / 50), 2)
-				}
-			});
-		}
-	});
 });
 </script>
